# SIMD-ONL

./: CMakeLists.txt  README.md  build.bat  build.ps1
benchmarks/: benchmark_vector_add.cpp
include/: simd_lib.h
src/common/: detection.cpp  dispatch.cpp  fft.cpp
src/scalar/: matrix_scalar.cpp  scalar.cpp
src/x86/: avx2.cpp  matrix_avx2.cpp  sse4.cpp
tests/: test_accuracy.cpp  test_advanced_operations.cpp  test_fft.cpp  test_precision.cpp  test_vector_add.cpp
